fix sticky header/footer resizing minor style update for collapsed layout

--- a/src/expansionPanels.scss
+++ b/src/expansionPanels.scss
@@ -153,6 +153,7 @@ md-expansion-panel-header {
     padding: 0 24px;
     box-sizing: border-box;
     border-bottom: 1px solid;
+    align-items: center;
   }
 
   &.md-stick {
